--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@table-library/react-table-library": "^4.1.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
